# friday

./: .gitignore  README.md  fbank_lfr_cmvn_feature.json
chat/: design.md  fbank_lfr_cmvn_feature.json  gui2  wake.sh
chat/MiniCPM-o-Demo/: .gitignore  README.md  README_zh.md  config.example.json  config.py  gateway.py  pytest.ini  replay_duplex_session.py  session_recorder.py  worker.py
chat/MiniCPM-o-Demo/MiniCPMO45/: modeling_minicpmo_unified.py  utils.py
chat/MiniCPM-o-Demo/assets/presets/omni/: chinese_call.yaml  english_call.yaml
chat/MiniCPM-o-Demo/core/: __init__.py
chat/MiniCPM-o-Demo/core/processors/: __init__.py  cpp_backend.py
chat/MiniCPM-o-Demo/core/schemas/: chat.py
chat/MiniCPM-o-Demo/docs/en/: cpp-backend.md  index.md
chat/MiniCPM-o-Demo/docs/zh/: cpp-backend.md  index.md
chat/MiniCPM-o-Demo/frontend/mobile/: package-lock.json  package.json
chat/MiniCPM-o-Demo/frontend/mobile/src/: App.css  App.tsx  mobile-duplex.ts
chat/MiniCPM-o-Demo/frontend/mobile/src/shared/: OmniSettingsWidget.tsx  settings-types.ts
chat/MiniCPM-o-Demo/gateway_modules/: app_registry.py  models.py  worker_pool.py
chat/MiniCPM-o-Demo/scripts/: materialize_duplex_session_from_cpp_assets.py  qa_browser_like_scenarios.py  run_gateway_qa.py  stack_smoke_test.py  verify_cpp_sampling_passthrough.py
chat/MiniCPM-o-Demo/static/: index.html  session-viewer.html  turnbased.html
chat/MiniCPM-o-Demo/static/audio-duplex/: audio-duplex-app.js  audio_duplex.html
chat/MiniCPM-o-Demo/static/duplex/lib/: duplex-session.js
chat/MiniCPM-o-Demo/static/faq/en/: audio-duplex.md  half-duplex.md  omni.md  turnbased.md
chat/MiniCPM-o-Demo/static/faq/zh/: audio-duplex.md  half-duplex.md  omni.md  turnbased.md
chat/MiniCPM-o-Demo/static/half-duplex/: half-duplex-app.js  half_duplex.html
chat/MiniCPM-o-Demo/static/half-duplex-omni/: half-duplex-omni-app.js  half_duplex_omni.html
chat/MiniCPM-o-Demo/static/mobile-omni/: index.html  mobile-bridge.js  settings-widget.js
chat/MiniCPM-o-Demo/static/omni/: omni-app.js  omni.html
chat/MiniCPM-o-Demo/static/shared/: i18n.js  preset-selector.js
chat/MiniCPM-o-Demo/tests/: conftest.py  mock_worker.py  test_api.py  test_chat.py  test_duplex.py  test_full_service.py  test_integration.py  test_queue.py  test_queue_stress.py  test_streaming.py
chat/custom_server/: CMakeLists.txt  cam_monitor.lua  camera.cpp  camera.h  gateway.cpp  gateway.h  gui  gui.cpp  gui2  gui2.cpp  gui3  gui3.cpp  lua_bridge.cpp  lua_bridge.h  main.cpp  play_tts.sh  server.lua  start.sh
chat/custom_server/build2/: minicpm-gui
chat/custom_server/scripts/: friday.lua  monitor.lua  ws_server.lua
chat/gui_gpui/: Cargo.toml  app.lua  bridge.c  friday.lua  friday_launcher  main.c  start.sh  ws_bridge.c
chat/gui_gpui/src/: lib.rs
chat/web/: README_zh.md  gateway.py  install.sh
