[package]
name = "friday_gui"
version = "0.1.0"
edition = "2021"

[lib]
name = "friday_gui"
crate-type = ["cdylib"]

[dependencies]
sdl2 = "0.37"
opencv = { version = "0.93", features = ["clang-runtime"] }
libc = "0.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = "thin"
